objects/LLC_BI__Product_Program_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LLC_BI__Context_Object_Field_Name__c</fullName>
        <description>This field is currently not used because the product program selector feature is not being used. Provides the field API name for the object in context.</description>
        <label>Context Object Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Object_Name__c</fullName>
        <description>This field is currently not used because the product program selector feature is not being used. Provides the object API name in context.</description>
        <label>Context Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is currently not used because the product program selector feature is not being used. Determines if the field mapping is active and should be used.</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Program_Attribute_Name__c</fullName>
        <description>This field is currently not used because the product program selector feature is not being used. Defines an attribute name that associates the product program with field mapping.</description>
        <label>Program Attribute Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Root_Object_Field_Name__c</fullName>
        <description>This field is currently not used because the product program selector feature is not in use. The API name of the id of the root object relative to the context object. If not set, it defaults to the API name of the root object.</description>
        <label>Root Object Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Program Field Mapping</label>
</CustomObject>